# evalforge

./: .gitignore  LICENSE  README.md  compute_harmonic_eri.py  pyproject.toml  real_harmonic_eri.json  run_extended_benchmarks.py  run_real_mmlu.py
evalforge/: __init__.py  contamination.py  core.py  eri.py  reporter.py
results/: real_harmonic_eri.json
results/gsm8k/: Llama-3.1-8B_gsm8k.json  Llama-3.3-70B_gsm8k.json  Llama-4-Scout-17B_gsm8k.json  Mistral-Small-3.1_gsm8k.json
results/mmlu/: GPT-OSS-120B_real_mmlu.json  Llama-3.1-8B_real_mmlu.json  Llama-3.3-70B_real_mmlu.json  Llama-4-Scout-17B_real_mmlu.json  Mistral-Small-3.1_real_mmlu.json  Qwen3-32B_real_mmlu.json
tests/: test_contamination.py  test_core.py  test_eri.py
