[project]
name = "evalforge"
version = "0.1.0"
description = "Holistic LLM Evaluation Framework with Enterprise Readiness Index"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.10"
authors = [{ name = "EvalForge Authors" }]
keywords = [
    "llm", "evaluation", "benchmarking", "enterprise-ai",
    "nlp", "machine-learning"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>=1.26",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
hf = ["transformers>=4.40", "torch>=2.2", "bitsandbytes>=0.43"]
openai = ["openai>=1.20"]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.9",
]

[project.scripts]
evalforge = "evalforge.__main__:main"

[project.urls]
Homepage = "https://github.com/your-org/evalforge"
Documentation = "https://evalforge.readthedocs.io"
Repository = "https://github.com/your-org/evalforge"
Issues = "https://github.com/your-org/evalforge/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=evalforge --cov-report=term-missing -v"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true
